--- a/shadcn-components-lookup/package.json
+++ b/shadcn-components-lookup/package.json
@@ -3,38 +3,41 @@
   "displayName": "Shadcn Components Lookup",
   "description": "Instantly preview and add any shadcn/ui component from the Command Palette",
   "version": "0.1.0",
+  "publisher": "fhswno",
+  "icon": "images/icon.png",
   "engines": {
     "vscode": "^1.96.0"
   },
   "categories": [
     "Other"
   ],
-  "activationEvents": [],
-  "main": "./dist/extension.js",
+  "activationEvents": [
+    "onCommand:shadcn-components-lookup.open"
+  ],
+  "main": "./out/extension.js",
   "contributes": {
     "commands": [
       {
-        "command": "shadcn-components-lookup.helloWorld",
-        "title": "Hello World"
+        "command": "shadcn-components-lookup.open",
+        "title": "> Shadcn Components: Lookup"
       }
     ]
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/fhswno/shadcn-components-lookup.git"
+  },
   "scripts": {
     "vscode:prepublish": "npm run package",
+    "package": "npm run check-types && npm run lint && node esbuild.js --production",
     "compile": "npm run check-types && npm run lint && node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
-    "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
-    "compile-tests": "tsc -p . --outDir out",
-    "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
     "check-types": "tsc --noEmit",
-    "lint": "eslint src",
-    "test": "vscode-test"
+    "lint": "eslint src"
   },
   "devDependencies": {
-    "@types/vscode": "^1.106.0",
+    "@types/vscode": "^1.96.0",
     "@types/mocha": "^10.0.10",
     "@types/node": "20.x",
     "@typescript-eslint/eslint-plugin": "^8.22.0",
